2009-08-14  Alan McGovern  <amcgovern@novell.com>

	* grid.h:
	* grid.cpp: Rewrite the size allocation code in grid to better
	  match the microsoft implementation. It works much better for
	  the pixel and auto cases, but still has some issues with
	  star columns. r: lewing

2009-08-14  Jeffrey Stedfast  <fejj@novell.com>

	* application.cpp (GetResource): Close the stream when we're
	done. Also changed to check write_cb exists before reading from
	the stream - if the callback is NULL, don't even bother.
	(GetResourceAsBuffer): Removed.
	(GetResourceAsPath): Instead of calling GetResourceAsBuffer(), do
	the streaming ourselves. Also return NULL if writing the stream to
	disk fails.

	* utils.cpp (managed_stream_open/read/write/etc): Changed to be
	internal. These symbols don't need to be publicly exported.

	* utils.h: Added a Stream_Close function signature to
	ManagedStreamCallbacks.

	* bitmapimage.cpp (resource_notify): Make static/internal - does
	not need to be publicly exported.

	r:kangaroo

2009-08-14  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: retry downloading up to 5 times.

2009-08-14  Stephane Delcroix  <sdelcroix@novell.com>

	* bitmapimage.h|cpp, multiscaliemage.cpp: abort downaloaders on 
	source change. 
	
	r: lewing

2009-08-14  Andreia Gaita  <avidigal@novell.com>

	* dependencyobject.cpp (clone_animation_storage): detach the old
	storage, and change the storage of the animation clock to point to
	the newly cloned one - clocks only have a single storage reference,
	so when they die they need to delete the storage, and when we're
	cloning a storage, the clock remains the same, so it needs to get
	updated too. Also, don't detach the new storage or call
	AttachAnimationStorage manually, that's already	done in it's
	constructor.

	r: alan

2009-08-13  Larry Ewing  <lewing@novell.com>

	* usercontrol.cpp (MeasureOverride): don't constrain the results.

	Fixes DRT #417

	r: andreia
